2015-01-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
 - Remove promise that read_capabilities won't throw exceptions.
2015-01-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx:
 - Show actual value before expected value; more helpful if it gets truncated.
 test/unit/test_escape.cxx:
 - Print escaped string for debugging.  Test fails against early 9.x postgres.
 - Test against unprintable characters.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint:
 - Change mktemp naming scheme.
 tools/maketemporary, tools/pqxx-fulltest, tools/pre-release-check,
 tools/release:
 - Use $() instead of ``.
 - Break shell if/then onto separate lines.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Cosmetic.
 config/missing:
 - Update to version from automake 1.14.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Remove commented-out LC_ALL=C.  Locales work now, and fast enough.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Simply require Python.
 - Use $() instead of ``.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Drop search for specific (and now long obsolete) automake versions.
 configure.ac.in, src/Makefile.am, test/Makefile.am.template,
 test/unit/Makefile.am.template, tools/Makefile.am:
 - Use newer, zero-arg version of AM_INIT_AUTOMAKE.
 - Move AC_CONFIG_SRCDIR above AM_INIT_AUTOMAKE; may be required now.
 - Wrap source fragments in AC_LANG_SOURCE, and double-quote them.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/compiler-public.hxx,
 include/pqxx/robusttransaction.hxx, include/pqxx/subtransaction.hxx,
 include/pqxx/transaction.hxx, src/connection_base.cxx, src/largeobject.cxx,
 src/notification.cxx, src/pipeline.cxx, src/tablereader.cxx,
 src/tablewriter.cxx, src/transaction_base.cxx:
 - Remove PQXX_QUIET_DESTRUCTORS.  Surely that Visual C++ 2003 bug's been fixed.