@@ -1,0 +1,10 @@
+#define HAVE_SYS_TYPES_H 1
+/* #define HAVE_UNISTD_H 1 */
+#define PQXX_HAVE_DISTANCE 1
+#define PQXX_HAVE_ISINF 1
+#define PQXX_HAVE_ISNAN 1
+/* #define PQXX_HAVE_SLEEP 1 */
+#define PQXX_HAVE_STRERROR_S 1
+/* #define PQXX_HAVE_SYS_SELECT_H 1 */
+#define PQXX_SELECT_ACCEPTS_NULL 1
+#define HAVE_VSNPRINTF_DECL 1
