@@ -1,0 +1,5 @@
+#define PQXX_HAVE_CPP_PRAGMA_MESSAGE 1
+#define PQXX_HAVE_CPP_WARNING 1
+#define PQXX_PQ_IN_NAMESPACE 1
+#define PQXX_HAVE_STRERROR_S 1
+#define PQXX_HAVE_SHARED_PTR 1
